feat(user): add user APIs operation
